deployment/etc/microshift/manifests/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-nginx-deployment
  namespace: basic-nginx
spec:
  selector:
    matchLabels:
      app: edge-app
  replicas: 2 
  template:
    metadata:
      labels:
        app: edge-app
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:latest
        ports:
        - containerPort: 8080
