deployment/etc/microshift/manifests/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-nginx-service
  namespace: basic-nginx
spec:
  type: NodePort
  selector:
    app: edge-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30303
