deployment/etc/microshift/manifests/nginx/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: basic-nginx-service
  namespace: basic-nginx
spec:
  host: rhem-device-2.virtual.local
  port:
    targetPort: 30303
  to:
    kind: Service
    name: basic-nginx-service
    weight: 100
  wildcardPolicy: None
